# ncurses-function

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  cmakeconfig.h.in
src/: CMakeLists.txt  board.cc  board.h  correct_curses.h  main.cc
